# rust-neomatrix

./: Cargo.toml
benchmarks/: .gitignore  cargo_bench_to_csv.py  generate_benchmarks.py  generate_report.py  requirements.txt
src/: lib.rs  matrix.rs  vector.rs
