[package]
name = "neomatrix"
version = "0.1.0"
authors = ["David Zmick <dpzmick@gmail.com>"]

[features]
vectorized = ["simd"]

[dependencies]
# try https://github.com/AdamNiederer/faster
# or stdsimd?
simd = { version = "0.2.0", optional = true }

[dev-dependencies]
libc = "0.2"
rblas = "0.0.13"

[profile.release]
debug = true

# use the metadata to store a variety of other compiler flags we would like to
# use for performance testing, but can't pass through cargo in any way
[package.metadata.global_environment]
CARGO_BLAS = "cblas"

[package.metadata.config.i686]
args = "-C target-cpu=i686"
unsupported-features = ["vectorized"]

[package.metadata.config.p4]
args = "-C target-cpu=pentium4"

[package.metadata.config.native]
args = "-C target-cpu=native"
